--- a/src/Notes/Music/ABPCI/abpci.html
+++ b/src/Notes/Music/ABPCI/abpci.html
@@ -71,6 +71,9 @@
 <a href="abpci.html#The%20Whole%20Note">The Whole Note</a>
 
 </li><li>
+<a href="abpci.html#Eighth%20Notes">Eighth Notes</a>
+
+</li><li>
 <a href="abpci.html#Time%20Signature">Time Signature</a>
 
 </li><li>
@@ -83,6 +86,9 @@
 <a href="abpci.html#Dotted%20Half%20Note">Dotted Half Note</a>
 
 </li><li>
+<a href="abpci.html#Dotted%20Quarter%20Notes">Dotted Quarter Notes</a>
+
+</li><li>
 <a href="abpci.html#The%20Grand%20Staff">The Grand Staff</a>
 
 </li><li>
@@ -93,6 +99,15 @@
 
 </li><li>
 <a href="abpci.html#The%20Sharp%20Sign">The Sharp Sign</a>
+
+</li><li>
+<a href="abpci.html#Staccato">Staccato</a>
+
+</li><li>
+<a href="abpci.html#Half%20Step">Half Step</a>
+
+</li><li>
+<a href="abpci.html#Whole%20Step">Whole Step</a>
 
 </li></ul>
 </li><li>
@@ -116,6 +131,15 @@
 
 </li><li>
 <a href="abpci.html#Harmonic%20Intervals%20in%20Sol%20Position">Harmonic Intervals in Sol Position</a>
+
+</li><li>
+<a href="abpci.html#6ths">6ths</a>
+
+</li><li>
+<a href="abpci.html#7ths">7ths</a>
+
+</li><li>
+<a href="abpci.html#Octave">Octave</a>
 
 </li></ul>
 </li><li>
@@ -151,6 +175,9 @@
 
 </li></ul>
 </li></ul>
+</li><li>
+<a href="abpci.html#Tetrachord">Tetrachord</a>
+
 </li></ul>
 <hr>
 
@@ -235,6 +262,10 @@ On this position the right hand is on Do Position, however the left hand is one 
 </p>
 
 <p>
+<img src="https://albamr09.github.io/public/assets/middle_do_position.png" alt="Middle Do Position">
+</p>
+
+<p>
 So both thumbs are over the middle Do.
 </p>
 
@@ -278,6 +309,16 @@ This noe has a count of \(4\).
 
 <p>
 <img src="https://albamr09.github.io/public/assets/whole_note.png" alt="Whole Note">
+</p>
+
+<div id="Alfred Basic Piano Course I-Notation-Eighth Notes"><h3 id="Eighth Notes" class="header"><a href="#Alfred Basic Piano Course I-Notation-Eighth Notes">Eighth Notes</a></h3></div>
+
+<p>
+Two eighth notes are played in the time of one quarter note.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/eighth_note.png" alt="Eighth_note">
 </p>
 
 <div id="Alfred Basic Piano Course I-Notation-Time Signature"><h3 id="Time Signature" class="header"><a href="#Alfred Basic Piano Course I-Notation-Time Signature">Time Signature</a></h3></div>
@@ -336,6 +377,16 @@ A <span id="Alfred Basic Piano Course I-Notation-Dotted Half Note-dotted half no
 <img src="https://albamr09.github.io/public/assets/dotted_half_note.png" alt="Dotted Half Note">
 </p>
 
+<div id="Alfred Basic Piano Course I-Notation-Dotted Quarter Notes"><h3 id="Dotted Quarter Notes" class="header"><a href="#Alfred Basic Piano Course I-Notation-Dotted Quarter Notes">Dotted Quarter Notes</a></h3></div>
+
+<p>
+A dotted quarter note is equivalent to a quarter note tied to a eighth note:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/dotted_quarter_note.png" alt="Dotted Quarter Note">
+</p>
+
 <div id="Alfred Basic Piano Course I-Notation-The Grand Staff"><h3 id="The Grand Staff" class="header"><a href="#Alfred Basic Piano Course I-Notation-The Grand Staff">The Grand Staff</a></h3></div>
 
 <p>
@@ -384,6 +435,36 @@ When a <span id="Alfred Basic Piano Course I-Notation-The Sharp Sign-sharp"></sp
 <img src="https://albamr09.github.io/public/assets/sharp_sign_score.png" alt="Sharp Sign on a Score">
 </p>
 
+<div id="Alfred Basic Piano Course I-Notation-Staccato"><h3 id="Staccato" class="header"><a href="#Alfred Basic Piano Course I-Notation-Staccato">Staccato</a></h3></div>
+
+<p>
+The dot over or under the notes indicates the <span id="Alfred Basic Piano Course I-Notation-Staccato-staccato"></span><strong id="staccato">staccato</strong> touch, which means: make the note very short.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/staccatto.png" alt="Stacatto">
+</p>
+
+<div id="Alfred Basic Piano Course I-Notation-Half Step"><h3 id="Half Step" class="header"><a href="#Alfred Basic Piano Course I-Notation-Half Step">Half Step</a></h3></div>
+
+<p>
+A half step is the distance between a key and the key directly above or below it (black or white).
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/half_step.png" alt="Half Step">
+</p>
+
+<div id="Alfred Basic Piano Course I-Notation-Whole Step"><h3 id="Whole Step" class="header"><a href="#Alfred Basic Piano Course I-Notation-Whole Step">Whole Step</a></h3></div>
+
+<p>
+A whole step is equal to two half steps.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/whole_step.png" alt="Whole Step">
+</p>
+
 <div id="Alfred Basic Piano Course I-Intervals"><h2 id="Intervals" class="header"><a href="#Alfred Basic Piano Course I-Intervals">Intervals</a></h2></div>
 
 <div id="Alfred Basic Piano Course I-Intervals-Melodic Interval"><h3 id="Melodic Interval" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Melodic Interval">Melodic Interval</a></h3></div>
@@ -424,6 +505,36 @@ Notes played together make <span id="Alfred Basic Piano Course I-Intervals-Harmo
 
 <p>
 <img src="https://albamr09.github.io/public/assets/harmonic_invtervals_g.png" alt="Harmonic Intervals in Sol Position">
+</p>
+
+<div id="Alfred Basic Piano Course I-Intervals-6ths"><h3 id="6ths" class="header"><a href="#Alfred Basic Piano Course I-Intervals-6ths">6ths</a></h3></div>
+
+<p>
+When you skip 4 white keys then the interval is a 6th.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/6h_interval.png" alt="6th Interval">
+</p>
+
+<div id="Alfred Basic Piano Course I-Intervals-7ths"><h3 id="7ths" class="header"><a href="#Alfred Basic Piano Course I-Intervals-7ths">7ths</a></h3></div>
+
+<p>
+When you skip 5 white keys then the interval is a 7th.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/7th_interval.png" alt="7th Interval">
+</p>
+
+<div id="Alfred Basic Piano Course I-Intervals-Octave"><h3 id="Octave" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Octave">Octave</a></h3></div>
+
+<p>
+When you skip 6 white keys then the interval is an <span id="Alfred Basic Piano Course I-Intervals-Octave-octave"></span><strong id="octave">octave</strong>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/octave.png" alt="Octave">
 </p>
 
 <div id="Alfred Basic Piano Course I-Chords"><h2 id="Chords" class="header"><a href="#Alfred Basic Piano Course I-Chords">Chords</a></h2></div>
@@ -497,6 +608,20 @@ Second inversion: Sol, Do, Mi (Sol is the lowest note).
 </li></ul>
 <p>
 <img src="https://albamr09.github.io/public/assets/c_major_g.png" alt="The Do Major Chord on Sol Position">
+</p>
+
+<div id="Alfred Basic Piano Course I-Tetrachord"><h2 id="Tetrachord" class="header"><a href="#Alfred Basic Piano Course I-Tetrachord">Tetrachord</a></h2></div>
+
+<p>
+A tetrachord is a series of four notes having a pattern of:
+</p>
+
+<p>
+Whole step, whole step, half step
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/tetrachord.png" alt="Tetrachord">
 </p>
 </div>
   
