[CET] 01_05: start notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -55,6 +55,9 @@ Functions and Models
 </li><li>
 <a href="01_04.html">Exponential Functions</a>
 
+</li><li>
+<a href="01_05.html">Inverse Functions and Logarithms</a>
+
 </li></ol>
 </li></ol>
 </div>
