Fix some typos [skip ci]

--- a/src/Notes/Math/Calculus/CET/01_05.html
+++ b/src/Notes/Math/Calculus/CET/01_05.html
@@ -219,13 +219,13 @@ As you can see the domain has been restricted to \([-\frac{\pi}{2}, \frac{-pi}{2
 By the <a href="01_05.html#Cancellation Equations">cancellation equations</a> we obtain:
 </p>
 
-\begin{aling}
+\begin{align}
 \sin^{-1}(\sin x) = x, -\frac{\pi}{2} \leq x \leq \frac{\pi}{2}
-\end{aling}
+\end{align}
 
-\begin{aling}
+\begin{align}
 \sin(\sin^{-1} x) = x, -1 \leq x \leq 1
-\end{aling}
+\end{align}
 
 <p>
 The inverse sine function has domain \([-1, 1]\) and range \([-\frac{\pi}{2}, \frac{\pi}{2}]\) and its graph is shown on Figure 20.
@@ -257,13 +257,13 @@ As you can see the domain has been restricted to \([0, \pi]\) (See Figure 21).
 By the <a href="01_05.html#Cancellation Equations">cancellation equations</a> we obtain:
 </p>
 
-\begin{aling}
+\begin{align}
 \cos^{-1}(\cos x) = x, 0 \leq x \leq \pi
-\end{aling}
+\end{align}
 
-\begin{aling}
+\begin{align}
 \cos(\cos^{-1} x) = x, -1 \leq x \leq 1
-\end{aling}
+\end{align}
 
 <p>
 The inverse cosine function has domain \([-1, 1]\) and range \([0, \pi]\) and its graph is shown on Figure 22.
@@ -295,13 +295,13 @@ As you can see the domain has been restricted to \([-\frac{\pi}{2}, \frac{\pi}{2
 By the <a href="01_05.html#Cancellation Equations">cancellation equations</a> we obtain:
 </p>
 
-\begin{aling}
+\begin{align}
 \tan^{-1}(\tan x) = x, -\frac{\pi}{2} \leq x \leq \frac{\pi}{2}
-\end{aling}
+\end{align}
 
-\begin{aling}
+\begin{align}
 \tan(\tan^{-1} x) = x, -1 \leq x \leq 1
-\end{aling}
+\end{align}
 
 <p>
 The inverse tangent function has domain \([-1, 1]\) and range \([-\frac{\pi}{2}, \frac{\pi}{2}]\) and its graph is shown on Figure 25.
