Fix typos [skip ci]

--- a/src/Notes/Music/ABPCI/abpci.html
+++ b/src/Notes/Music/ABPCI/abpci.html
@@ -101,6 +101,9 @@
 <a href="abpci.html#The%20Sharp%20Sign">The Sharp Sign</a>
 
 </li><li>
+<a href="abpci.html#The%20Flat%20Sign">The Flat Sign</a>
+
+</li><li>
 <a href="abpci.html#Staccato">Staccato</a>
 
 </li><li>
@@ -433,6 +436,16 @@ When a <span id="Alfred Basic Piano Course I-Notation-The Sharp Sign-sharp"></sp
 
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/sharp_sign_score.png" alt="Sharp Sign on a Score">
+</p>
+
+<div id="Alfred Basic Piano Course I-Notation-The Flat Sign"><h3 id="The Flat Sign" class="header"><a href="#Alfred Basic Piano Course I-Notation-The Flat Sign">The Flat Sign</a></h3></div>
+
+<p>
+The flat sign before a note means to play the next key to the left of said note.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/flat_sign.png" alt="Flat Sign">
 </p>
 
 <div id="Alfred Basic Piano Course I-Notation-Staccato"><h3 id="Staccato" class="header"><a href="#Alfred Basic Piano Course I-Notation-Staccato">Staccato</a></h3></div>
